# binardat-switch-config

./: .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README-SSH.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml
docs/: LIGHTWEIGHT_ALTERNATIVES_INVESTIGATION.md  README.md  authentication-and-web-interface.md  backup.md  dependencies.md  development.md  menu-implementation-guide.md  menu-interaction-guide.md  menu-structure-findings.md  merging.md  releases.md
docs/archive/: authentication-findings.md  javascript-menu-analysis.md  menu-analysis.md  reconnaissance-findings.md
docs/docker/: building.md  quickstart.md  troubleshooting.md  usage.md  versioning-and-releases.md
examples/: docker-compose.example.yml  env.example
proof-of-concept/: 01_reconnaissance.py  02_test_login.py  03_menu_extraction.py  04_test_ip_change.py  05_analyze_menu_javascript.py  IMPLEMENTATION_SUMMARY.md  MENU_DISCOVERY_SUMMARY.md  QUICKSTART.md  README.md  SELENIUM_USAGE.md  TESTING.md  analyze_login.py  analyze_menu_structure.py  change_ip_address.py  config_example.yaml  debug_ip_api.py  debug_ip_config.py  debug_ip_config_loaded.html  debug_login.py  enable_ssh_selenium.py  main_page.html  menu_javascript_analysis.json  menu_structure.json  requirements-selenium.txt  selenium_ip_change.py  simple_ip_change.py  switch_auth.py  temp_ssh_discovery.py  test_ip_access_sequence.py  test_ip_cgi_methods.py  test_lightweight_alternatives.sh  test_main_pages.py  test_rc4.py  test_selenium_setup.py
proof-of-concept/verification/: README.md  __init__.py  run_all_verifications.py  test_01_rc4_crypto.py  test_02_authentication.py  test_03_menu_navigation.py  test_04_form_submission.py  test_05_end_to_end.py
scripts/: build-docker.sh  release.sh  test-docker.sh
src/: enable_ssh.py  rc4_crypto.py
src/binardat_switch_config/: __init__.py  cli.py  exceptions.py  ssh_enabler.py
src/binardat_switch_config/cli/: backup.py  main.py
src/binardat_switch_config/netmiko/: connection.py  device_profiles.py  retrieval.py
src/binardat_switch_config/storage/: filesystem.py  git_manager.py
tests/: __init__.py  test_example.py  test_placeholder.py
