[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
binardat_switch_config = ["py.typed"]

[project]
name = "binardat-switch-config"
version = "2026.01.25"
description = "Python tool to configure Binardat brand switches from default settings to custom"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "bmcdonough"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pycryptodome>=3.19.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pydocstyle==6.3.0",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pre-commit==3.6.0",
    "bump-my-version>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/bmcdonough/binardat-switch-config"
Repository = "https://github.com/bmcdonough/binardat-switch-config"

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79
extend-ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "W503",  # Line break before binary operator (conflicts with black)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    ".venv/*",
    "venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104"]
match = '(?!test_).*\.py'
match-dir = '(?!tests|\.).*'

[tool.bumpversion]
current_version = "2026.01.25"
parse = """(?x)
    (?P<release>
        (?:[1-9][0-9]{3})\\.
        (?:1[0-2]|0?[1-9])\\.
        (?:3[0-1]|[1-2][0-9]|0?[1-9])
    )
    (?:\\.(?P<micro>\\d+))?
    (?:\\.(?P<dev>dev\\d+))?
"""
serialize = [
    "{release}.{micro}.{dev}",
    "{release}.{micro}",
    "{release}.{dev}",
    "{release}"
]
commit = true
tag = true
message = "Bump version: {current_version} → {new_version}"

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{MM}.{DD}"

[tool.bumpversion.parts.micro]
first_value = "1"

[tool.bumpversion.parts.dev]
first_value = "dev0"
independent = false

[[tool.bumpversion.files]]
filename = "src/binardat_switch_config/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""
